src/parser/lexer.cpp
/* Generated by re2c */
#include "lexer.h"

#include <cstddef>

namespace dpp::parser {
namespace {

struct Cursor {
  explicit Cursor(const std::string &input) : source(input) {}

  const std::string &source;
  const char *cursor = source.data();
  const char *marker = nullptr;
  const char *limit = source.data() + source.size();
  std::size_t line = 1;
  std::size_t column = 1;
};

SourceLocation location(const Cursor &ctx, const char *cursor) {
  return SourceLocation{
      static_cast<std::size_t>(cursor - ctx.source.data()),
      ctx.line,
      ctx.column,
  };
}

void advance_location(Cursor &ctx, const char *begin, const char *end) {
  for (const char *it = begin; it != end; ++it) {
    if (*it == '\n') {
      ++ctx.line;
      ctx.column = 1;
    } else {
      ++ctx.column;
    }
  }
}

Token make_token(Cursor &ctx, TokenKind kind, const char *begin, const SourceLocation &begin_location) {
  advance_location(ctx, begin, ctx.cursor);

  Token token;
  token.kind = kind;
  token.text.assign(begin, ctx.cursor);
  token.range.begin = begin_location;
  token.range.end = location(ctx, ctx.cursor);
  if (kind == TokenKind::identifier) {
    token.keyword = classify_keyword(token.text);
    if (token.keyword != KeywordKind::none) {
      token.kind = TokenKind::keyword;
    }
  }
  return token;
}

} // namespace

std::vector<Token> lex_translation_unit(const std::string &source) {
  Cursor ctx(source);
  std::vector<Token> tokens;

  while (ctx.cursor < ctx.limit) {
    const char *token_begin = ctx.cursor;
    const SourceLocation token_location = location(ctx, token_begin);

#define YYPEEK ((ctx.cursor < ctx.limit) ? *ctx.cursor : '\0')
#define YYSKIP do { ++ctx.cursor; } while (false);
#define YYBACKUP do { ctx.marker = ctx.cursor; } while (false);
#define YYRESTORE do { ctx.cursor = ctx.marker; } while (false);

    
{
	char yych;
	unsigned int yyaccept = 0;
	yych = YYPEEK;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy2;
		case '!':
		case '%':
		case '&':
		case '*':
		case '+':
		case '-':
		case ':':
		case '<':
		case '=':
		case '>':
		case '?':
		case '^':
		case '|':
		case '~': goto yy4;
		case '"': goto yy7;
		case '#': goto yy9;
		case '\'': goto yy11;
		case '(':
		case ')':
		case ',':
		case '.':
		case ';':
		case '[':
		case ']':
		case '{':
		case '}': goto yy13;
		case '/': goto yy14;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy17;
		default: goto yy1;
	}
yy1:
	YYSKIP
	{ tokens.push_back(make_token(ctx, TokenKind::unknown, token_begin, token_location)); continue; }
yy2:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy2;
		default: goto yy3;
	}
yy3:
	{
        advance_location(ctx, token_begin, ctx.cursor);
        continue;
      }
yy4:
	YYSKIP
	yych = YYPEEK;
yy5:
	switch (yych) {
		case '!':
		case '%':
		case '&':
		case '*':
		case '+':
		case '-':
		case '/':
		case ':':
		case '<':
		case '=':
		case '>':
		case '?':
		case '^':
		case '|':
		case '~': goto yy4;
		default: goto yy6;
	}
yy6:
	{ tokens.push_back(make_token(ctx, TokenKind::oper, token_begin, token_location)); continue; }
yy7:
	yyaccept = 0;
	YYSKIP
	YYBACKUP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy8;
		case '"': goto yy19;
		case '\\': goto yy20;
		default: goto yy7;
	}
yy8:
	{ tokens.push_back(make_token(ctx, TokenKind::string_literal, token_begin, token_location)); continue; }
yy9:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case 0x00:
		case '\n': goto yy10;
		default: goto yy9;
	}
yy10:
	{ tokens.push_back(make_token(ctx, TokenKind::preprocessor, token_begin, token_location)); continue; }
yy11:
	yyaccept = 1;
	YYSKIP
	YYBACKUP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy12;
		case '\'': goto yy22;
		case '\\': goto yy23;
		default: goto yy11;
	}
yy12:
	{ tokens.push_back(make_token(ctx, TokenKind::char_literal, token_begin, token_location)); continue; }
yy13:
	YYSKIP
	{ tokens.push_back(make_token(ctx, TokenKind::punctuation, token_begin, token_location)); continue; }
yy14:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case '*': goto yy24;
		case '/': goto yy26;
		default: goto yy5;
	}
yy15:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy15;
		default: goto yy16;
	}
yy16:
	{ tokens.push_back(make_token(ctx, TokenKind::number_literal, token_begin, token_location)); continue; }
yy17:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy17;
		default: goto yy18;
	}
yy18:
	{ tokens.push_back(make_token(ctx, TokenKind::identifier, token_begin, token_location)); continue; }
yy19:
	YYSKIP
	goto yy8;
yy20:
	YYSKIP
	yych = YYPEEK;
	if (yych >= 0x01) goto yy7;
yy21:
	YYRESTORE
	switch (yyaccept) {
		case 0: goto yy8;
		case 1: goto yy12;
		default: goto yy25;
	}
yy22:
	YYSKIP
	goto yy12;
yy23:
	YYSKIP
	yych = YYPEEK;
	if (yych <= 0x00) goto yy21;
	goto yy11;
yy24:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy25;
		case '!':
		case '%':
		case '&':
		case '+':
		case '-':
		case '/':
		case ':':
		case '<':
		case '=':
		case '>':
		case '?':
		case '^':
		case '|':
		case '~': goto yy24;
		case '*': goto yy29;
		default: goto yy28;
	}
yy25:
	{ tokens.push_back(make_token(ctx, TokenKind::comment, token_begin, token_location)); continue; }
yy26:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case 0x00:
		case '\n': goto yy27;
		default: goto yy26;
	}
yy27:
	{ tokens.push_back(make_token(ctx, TokenKind::comment, token_begin, token_location)); continue; }
yy28:
	yyaccept = 2;
	YYSKIP
	YYBACKUP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy25;
		case '*': goto yy30;
		default: goto yy28;
	}
yy29:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy6;
		case '!':
		case '%':
		case '&':
		case '*':
		case '+':
		case '-':
		case ':':
		case '<':
		case '=':
		case '>':
		case '?':
		case '^':
		case '|':
		case '~': goto yy24;
		case '/': goto yy31;
		default: goto yy28;
	}
yy30:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case 0x00: goto yy21;
		case '/': goto yy32;
		default: goto yy28;
	}
yy31:
	YYSKIP
	yych = YYPEEK;
	switch (yych) {
		case '!':
		case '%':
		case '&':
		case '*':
		case '+':
		case '-':
		case '/':
		case ':':
		case '<':
		case '=':
		case '>':
		case '?':
		case '^':
		case '|':
		case '~': goto yy4;
		default: goto yy25;
	}
yy32:
	YYSKIP
	goto yy25;
}


#undef YYSKIP
#undef YYBACKUP
#undef YYRESTORE
#undef YYPEEK
  }

  Token eof;
  eof.kind = TokenKind::end_of_file;
  eof.range.begin = location(ctx, ctx.cursor);
  eof.range.end = eof.range.begin;
  tokens.push_back(eof);
  return tokens;
}

} // namespace dpp::parser
